docker/v2/docker-compose/templates/messenger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: messenger
  name: messenger
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: messenger
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/v2-default: "true"
        io.kompose.service: messenger
    spec:
      containers:
        - args:
            - bin/console
            - messenger:consume
            - async
            - --time-limit=3600
          image: kbin
          livenessProbe:
            exec:
              command:
                - ps aux | grep 'messenger[:]consume' || exit 1
          name: messenger
          resources: {}
          volumeMounts:
            - mountPath: /var/www/kbin/public/media
              name: media
      restartPolicy: Always
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media
status: {}
