docker/v2/docker-compose/templates/php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: php
  name: php
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: php
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/v2-default: "true"
        io.kompose.service: php
    spec:
      containers:
        - args:
            - php-fpm
          image: kbin
          livenessProbe:
            exec:
              command:
                - REQUEST_METHOD=GET SCRIPT_NAME=/ping SCRIPT_FILENAME=/ping cgi-fcgi -bind -connect localhost:9000 || exit 1
          name: php
          ports:
            - containerPort: 9000
          resources: {}
          volumeMounts:
            - mountPath: /var/www/kbin/public/media
              name: media
      restartPolicy: Always
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media
status: {}
