docker/v2/docker-compose/templates/v2-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: v2-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/v2-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/v2-default: "true"
